--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Login</h1>
+      <h1>Connexion</h1>
       <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
       <p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
     </div>
@@ -11,21 +11,21 @@
         <div class="form-group">
           <label>Email</label>
 
-          <input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
+          <input type="email" name="email" class="form-control" ng-model="vm.user.email" required autofocus>
         </div>
 
         <div class="form-group">
-          <label>Password</label>
+          <label>Mot de passe</label>
 
           <input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
         </div>
 
         <div class="form-group has-error">
           <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
-             Please enter your email and password.
+             Merci d'entrer votre email et mot de passe.
           </p>
           <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
-             Please enter a valid email.
+             Merci d'entrer une adresse email valide.
           </p>
 
           <p class="help-block">{{ vm.errors.login }}</p>
@@ -33,10 +33,10 @@
 
         <div>
           <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
+            Connexion
           </button>
           <a class="btn btn-default btn-lg btn-register" ui-sref="signup">
-            Register
+            S'enregistrer
           </a>
         </div>
 
