--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Change Password</h1>
+      <h1>Changer de mot de passe</h1>
     </div>
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="vm.changePassword(form)" novalidate>
 
         <div class="form-group">
-          <label>Current Password</label>
+          <label>Mot de passe actuel</label>
 
           <input type="password" name="password" class="form-control" ng-model="vm.user.oldPassword"
                  mongoose-error/>
@@ -17,19 +17,19 @@
         </div>
 
         <div class="form-group">
-          <label>New Password</label>
+          <label>Nouveau mot de passe</label>
 
           <input type="password" name="newPassword" class="form-control" ng-model="vm.user.newPassword"
                  ng-minlength="3"
                  required/>
           <p class="help-block"
              ng-show="(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || vm.submitted)">
-            Password must be at least 3 characters.
+            Votre mot de passe doit être d'au moins 3 caractères.
           </p>
         </div>
 
         <div class="form-group">
-          <label>Confirm New Password</label>
+          <label>Confirmer le nouveau mot de passe</label>
 
           <input type="password" name="confirmPassword" class="form-control" ng-model="vm.user.confirmPassword"
                  match="vm.user.newPassword"
@@ -37,14 +37,14 @@
                  required=""/>
           <p class="help-block"
              ng-show="form.confirmPassword.$error.match && vm.submitted">
-            Passwords must match.
+            Les mots de passe doivent correspondre.
           </p>
 
         </div>
 
         <p class="help-block"> {{ vm.message }} </p>
 
-        <button class="btn btn-lg btn-primary" type="submit">Save changes</button>
+        <button class="btn btn-lg btn-primary" type="submit">Valider</button>
       </form>
     </div>
   </div>
