--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container"><!--   ng-init="members = [      { firstName: '', lastName: '', function: 'Président', email: '' },      { firstName: '', lastName: '', function: 'Trésorier', email: '' },      { firstName: '', lastName: '', function: 'Membre', email: '' },      { firstName: '', lastName: '', function: 'Membre', email: '' },      { firstName: '', lastName: '', function: 'Membre', email: '' }    ]"> -->
   <div class="row">
     <div class="col-sm-12">
       <h1>Enregistrement</h1>
@@ -7,50 +7,50 @@
       <uib-tabset active="activeJustified">
         <uib-tab index="0" heading="Compte individuel">
           <br />
-          <form class="form" name="form" ng-submit="vm.registerUser(form)" novalidate>
+          <form class="form" name="userForm" ng-submit="vm.registerUser(userForm)" novalidate>
 
             <div class="row">
               <div class="col-sm-6">
-                <div class="form-group" ng-class="{ 'has-success': form.firstName.$valid && vm.submitted,
-                                                    'has-error': form.firstName.$invalid && vm.submitted }">
+                <div class="form-group" ng-class="{ 'has-success': userForm.firstName.$valid && vm.submitted,
+                                                    'has-error': userForm.firstName.$invalid && vm.submitted }">
                   <label>Prénom</label>
 
                   <input type="text" name="firstName" class="form-control" ng-model="vm.user.firstName"
                          required autofocus />
-                  <p class="help-block" ng-show="form.firstName.$error.required && vm.submitted">
+                  <p class="help-block" ng-show="userForm.firstName.$error.required && vm.submitted">
                     Votre prénom est requis
                   </p>
                 </div>
               </div>
 
               <div class="col-sm-6">
-                <div class="form-group" ng-class="{ 'has-success': form.lastName.$valid && vm.submitted,
-                                                    'has-error': form.lastName.$invalid && vm.submitted }">
+                <div class="form-group" ng-class="{ 'has-success': userForm.lastName.$valid && vm.submitted,
+                                                    'has-error': userForm.lastName.$invalid && vm.submitted }">
                   <label>Nom</label>
 
                   <input type="text" name="lastName" class="form-control" ng-model="vm.user.lastName"
                          required/>
-                  <p class="help-block" ng-show="form.lastName.$error.required && vm.submitted">
+                  <p class="help-block" ng-show="userForm.lastName.$error.required && vm.submitted">
                     Votre nom est requis
                   </p>
                 </div>
               </div>
             </div>
 
-            <div class="form-group" ng-class="{ 'has-success': form.email.$valid && vm.submitted,
-                                                'has-error': form.email.$invalid && vm.submitted }">
+            <div class="form-group" ng-class="{ 'has-success': userForm.email.$valid && vm.submitted,
+                                                'has-error': userForm.email.$invalid && vm.submitted }">
               <label>Email</label>
 
               <input type="email" name="email" class="form-control" ng-model="vm.user.email"
                      required
                      mongoose-error/>
-              <p class="help-block" ng-show="form.email.$error.email && vm.submitted">
+              <p class="help-block" ng-show="userForm.email.$error.email && vm.submitted">
                 Cela ne semble pas être une adresse email valide.
               </p>
-              <p class="help-block" ng-show="form.email.$error.required && vm.submitted">
+              <p class="help-block" ng-show="userForm.email.$error.required && vm.submitted">
                 Quelle est votre adresse email ?
               </p>
-              <p class="help-block" ng-show="form.email.$error.mongoose">
+              <p class="help-block" ng-show="userForm.email.$error.mongoose">
                 {{ vm.errors.email }}
               </p>
             </div>
@@ -58,8 +58,8 @@
 
             <div class="row">
               <div class="col-sm-6">
-                <div class="form-group" ng-class="{ 'has-success': form.password.$valid && vm.submitted,
-                                                    'has-error': form.password.$invalid && vm.submitted }">
+                <div class="form-group" ng-class="{ 'has-success': userForm.password.$valid && vm.submitted,
+                                                    'has-error': userForm.password.$invalid && vm.submitted }">
                   <label>Mot de passe</label>
 
                   <input type="password" name="password" class="form-control" ng-model="vm.user.password"
@@ -67,38 +67,38 @@
                          required
                          mongoose-error/>
                   <p class="help-block"
-                     ng-show="(form.password.$error.minlength || form.password.$error.required) && vm.submitted">
+                     ng-show="(userForm.password.$error.minlength || userForm.password.$error.required) && vm.submitted">
                     Le mot de passe doit être d'au moins 3 caractères.
                   </p>
-                  <p class="help-block" ng-show="form.password.$error.mongoose">
+                  <p class="help-block" ng-show="userForm.password.$error.mongoose">
                     {{ vm.errors.password }}
                   </p>
                 </div>
               </div>
 
               <div class="col-sm-6">
-                <div class="form-group" ng-class="{ 'has-success': form.confirmPassword.$valid && vm.submitted,
-                                                    'has-error': form.confirmPassword.$invalid && vm.submitted }">
+                <div class="form-group" ng-class="{ 'has-success': userForm.confirmPassword.$valid && vm.submitted,
+                                                    'has-error': userForm.confirmPassword.$invalid && vm.submitted }">
                   <label>Confirmer le mot de passe</label>
                   <input type="password" name="confirmPassword" class="form-control" ng-model="vm.user.confirmPassword"
                          match="vm.user.password"
                          ng-minlength="3" required/>
                   <p class="help-block"
-                     ng-show="form.confirmPassword.$error.match && vm.submitted">
+                     ng-show="userForm.confirmPassword.$error.match && vm.submitted">
                     Les mots de passe doivent être identiques.
                   </p>
                 </div>
               </div>
             </div>
 
-            <div class="form-group" ng-class="{ 'has-success': form.userClubCode.$valid && vm.submitted,
-                                                'has-error': form.userClubCode.$invalid && vm.submitted }">
+            <div class="form-group" ng-class="{ 'has-success': userForm.userClubCode.$valid && vm.submitted,
+                                                'has-error': userForm.userClubCode.$invalid && vm.submitted }">
               <label>Si vous faites partie d'un club d'investissement, entrez son code</label>
 
                                                                       <!-- ng-model="vm.user.firstName" -->
               <input type="text" name="clubCode" class="form-control" 
                       />
-              <!-- <p class="help-block" ng-show="form.clubCode.$error.required && vm.submitted">
+              <!-- <p class="help-block" ng-show="userForm.clubCode.$error.required && vm.submitted">
                 Votre prénom est requis
               </p> -->
             </div>
@@ -123,72 +123,148 @@
         <uib-tab index="1" heading="Club d'investissement" disable="tab.disabled">
 
           <br />
-          <form class="form" name="form" ng-submit="vm.registerClub(form)" novalidate>
+          <form class="form" name="clubForm" ng-submit="vm.registerClub(clubForm)" novalidate>
 
-            <div class="form-group" ng-class="{ 'has-success': form.clubName.$valid && vm.submitted,
-                                                'has-error': form.clubName.$invalid && vm.submitted }">
-              <label>Nom du club d'investissement</label>
+            <div class="row">
+              <div class="col-sm-7">
+                <div class="form-group" ng-class="{ 'has-success': clubForm.clubName.$valid && vm.submitted,
+                                                    'has-error': clubForm.clubName.$invalid && vm.submitted }">
+                  <label>Nom du club d'investissement</label>
 
-              <input type="text" name="clubName" class="form-control" ng-model="vm.club.clubName"
-                     required />
-              <p class="help-block" ng-show="form.clubName.$error.required && vm.submitted">
-                Le nom du club est requis
-              </p>
+                  <input type="text" name="clubName" class="form-control" ng-model="vm.club.clubName"
+                         required />
+                  <p class="help-block" ng-show="clubForm.clubName.$error.required && vm.submitted">
+                    Le nom du club est requis
+                  </p>
+                </div>
+              </div>
+
+              <div class="col-sm-5">
+                <div class="form-group" ng-class="{ 'has-success': clubForm.creationDate.$valid && vm.submitted,
+                                                    'has-error': clubForm.creationDate.$invalid && vm.submitted }">
+                  <label>Date de création du club</label>
+
+                  <input type="date" name="creationDate" class="form-control" ng-model="vm.club.creationDate"
+                         required />
+                  <p class="help-block" ng-show="clubForm.creationDate.$error.required && vm.submitted">
+                    La date de création du club est requise
+                  </p>
+                </div>
+              </div>
             </div>
 
-            <div class="form-group" ng-class="{ 'has-success': form.initialAmount.$valid && vm.submitted,
-                                                'has-error': form.initialAmount.$invalid && vm.submitted }">
-              <label>Montant du versement initial</label>
+            <div class="row">
+              <div class="col-sm-3">
+                <div class="form-group" ng-class="{ 'has-success': clubForm.initialAmount.$valid && vm.submitted,
+                                                    'has-error': clubForm.initialAmount.$invalid && vm.submitted }">
+                  <label>Montant du versement initial</label>
 
-              <input type="text" name="initialAmount" class="form-control" ng-model="vm.club.initialAmount"
-                     required />
-              <p class="help-block" ng-show="form.initialAmount.$error.required && vm.submitted">
-                Le montant du versement initial est requis
-              </p>
+                  <input type="text" name="initialAmount" class="form-control" ng-model="vm.club.initialAmount"
+                         required />
+                  <p class="help-block" ng-show="clubForm.initialAmount.$error.required && vm.submitted">
+                    Le montant du versement initial est requis
+                  </p>
+                </div>
+              </div>
+
+              <div class="col-sm-3">
+                <div class="form-group" ng-class="{ 'has-success': clubForm.monthlyAmount.$valid && vm.submitted,
+                                                    'has-error': clubForm.monthlyAmount.$invalid && vm.submitted }">
+                  <label>Montant du versement mensuel</label>
+
+                  <input type="text" name="monthlyAmount" class="form-control" ng-model="vm.club.monthlyAmount"
+                         required />
+                  <p class="help-block" ng-show="clubForm.monthlyAmount.$error.required && vm.submitted">
+                    Le montant du versement mensuel est requis
+                  </p>
+                </div>
+              </div>
+
+              <div class="col-sm-3">
+                <div class="form-group" ng-class="{ 'has-success': clubForm.shareAmount.$valid && vm.submitted,
+                                                    'has-error': clubForm.shareAmount.$invalid && vm.submitted }">
+                  <label>Montant de la part</label>
+
+                  <input type="text" name="shareAmount" class="form-control" ng-model="vm.club.shareAmount"
+                         required />
+                  <p class="help-block" ng-show="clubForm.shareAmount.$error.required && vm.submitted">
+                    Le montant de la part est requis
+                  </p>
+                </div>
+              </div>
+
+              <div class="col-sm-3">
+                <div class="form-group" ng-class="{ 'has-success': clubForm.exitPercentage.$valid && vm.submitted,
+                                                    'has-error': clubForm.exitPercentage.$invalid && vm.submitted }">
+                  <label>Pourcentage de frais de démission</label>
+
+                  <input type="text" name="exitPercentage" class="form-control" ng-model="vm.club.exitPercentage"
+                         required />
+                  <p class="help-block" ng-show="clubForm.exitPercentage.$error.required && vm.submitted">
+                    Le pourcentage de frais de démission est requis
+                  </p>
+                </div>
+              </div>
+
             </div>
 
-            <div class="form-group" ng-class="{ 'has-success': form.monthlyAmount.$valid && vm.submitted,
-                                                'has-error': form.monthlyAmount.$invalid && vm.submitted }">
-              <label>Montant du versement mensuel</label>
+            <div class="row">
 
-              <input type="text" name="monthlyAmount" class="form-control" ng-model="vm.club.monthlyAmount"
-                     required />
-              <p class="help-block" ng-show="form.monthlyAmount.$error.required && vm.submitted">
-                Le montant du versement mensuel est requis
-              </p>
-            </div>
+              <div class="col-sm-12">
+                <br />
+                <div class="form-group text-center" ng-class="{ 'has-success': clubForm.members.$valid && vm.submitted,
+                                                    'has-error': clubForm.members.$invalid && vm.submitted }">
+                  <label>Membres</label>
+                  <br /><br />
 
-            <div class="form-group" ng-class="{ 'has-success': form.shareAmount.$valid && vm.submitted,
-                                                'has-error': form.shareAmount.$invalid && vm.submitted }">
-              <label>Montant de la part</label>
+                  <div class="row">
+                    <div class="col-sm-offset-2 col-sm-2">
+                      <b>Prénom</b>
+                    </div>
+                    <div class="col-sm-2">
+                      <b>Nom</b>
+                    </div>
+                    <div class="col-sm-2">
+                      <b>Fonction</b>
+                    </div>
+                    <div class="col-sm-2">
+                      <b>Email</b>
+                    </div>
+                  </div>
 
-              <input type="text" name="shareAmount" class="form-control" ng-model="vm.club.shareAmount"
-                     required />
-              <p class="help-block" ng-show="form.shareAmount.$error.required && vm.submitted">
-                Le montant de la part est requis
-              </p>
-            </div>
+                  <div class="row" ng-repeat="(i, member) in members track by $index">
+                    <div class="col-sm-offset-2 col-sm-2">
+                      <input class="form-control" ng-model="member.firstName" required />
+                    </div>
+                    <div class="col-sm-2">
+                      <input class="form-control" ng-model="member.lastName" required />
+                    </div>
+                    <div class="col-sm-2">
+                      <select class="form-control select-text-center" name="function" ng-model="member.function" />
+                        <option value="president">Président</option>
+                        <option value="treasurer">Trésorier</option>
+                        <option value="member">Membre</option>
+                      </select>
+                    </div>
+                    <div class="col-sm-2">
+                      <input class="form-control" ng-model="member.email" required />
+                    </div>
+                    <div class="col-sm-1 signup-members-trash">
+                      <i class="fa fa-trash" aria-hidden="true" ng-click="removeMember(i)"></i>
+                    </div>
+                  </div>
 
-            <div class="form-group" ng-class="{ 'has-success': form.exitPercentage.$valid && vm.submitted,
-                                                'has-error': form.exitPercentage.$invalid && vm.submitted }">
-              <label>Pourcentage de frais de démission</label>
+                  <div class="row">
+                    <div class="col-sm-12 signup-members-plus text-center" ng-show="members.length < 20">
+                      <i class="fa fa-plus-circle" aria-hidden="true" ng-click="addMember()"></i>
+                    </div>
+                    <div class="col-sm-12 text-center" ng-show="members.length >= 20">
+                      <br />Un club d'investissement ne peut légalement contenir que 20 membres au maximum.
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-              <input type="text" name="exitPercentage" class="form-control" ng-model="vm.club.exitPercentage"
-                     required />
-              <p class="help-block" ng-show="form.exitPercentage.$error.required && vm.submitted">
-                Le pourcentage de frais de démission est requis
-              </p>
-            </div>
-
-            <div class="form-group" ng-class="{ 'has-success': form.creationDate.$valid && vm.submitted,
-                                                'has-error': form.creationDate.$invalid && vm.submitted }">
-              <label>Date de création du club</label>
-
-              <input type="date" name="creationDate" class="form-control" ng-model="vm.club.creationDate"
-                     required />
-              <p class="help-block" ng-show="form.creationDate.$error.required && vm.submitted">
-                La date de création du club est requise
-              </p>
             </div>
 
             <div>
