--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -3,7 +3,7 @@
   <ul class="list-group user-list">
     <li class="list-group-item" ng-repeat="user in admin.users">
 	    <div class="user-info">
-	        <strong>{{user.name}}</strong><br>
+	        <strong>{{user.firstName}} {{user.lastName}}</strong><br>
 	        <span class="text-muted">{{user.email}}</span>
 	    </div>
         <a ng-click="admin.delete(user)" class="trash"><span class="fa fa-trash fa-2x"></span></a>
