--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -91,17 +91,13 @@
               </div>
             </div>
 
-            <div class="form-group" ng-class="{ 'has-success': userForm.userClubCode.$valid && vm.submitted,
+            <!-- <div class="form-group" ng-class="{ 'has-success': userForm.userClubCode.$valid && vm.submitted,
                                                 'has-error': userForm.userClubCode.$invalid && vm.submitted }">
               <label>Si vous faites partie d'un club d'investissement, entrez son code</label>
 
-                                                                      <!-- ng-model="vm.user.firstName" -->
               <input type="text" name="clubCode" class="form-control" 
                       />
-              <!-- <p class="help-block" ng-show="userForm.clubCode.$error.required && vm.submitted">
-                Votre prénom est requis
-              </p> -->
-            </div>
+            </div> -->
 
             <div>
               <button class="btn btn-inverse btn-lg btn-register" type="submit">
